# splitfits

./: .circle.yml  CMakeLists.txt  README.md  splitfits.c  test.sh  test_config.sh  version.h.in
.circleci/: config.yml
tests/: test_split.sh  test_usage.sh
